--- a/assets/pages/about/about.html
+++ b/assets/pages/about/about.html
@@ -14,10 +14,6 @@
     <header class="cabecalho">
         <nav class="menu">
             <a href="../principal/index.html" class="menu-link">Home</a>
-            <!-- <select id="languageSelect" class="language-select">
-                <option value="pt-br">Português</option>
-                <option value="en">English</option>
-            </select> -->
         </nav>
     </header>
 
@@ -39,10 +35,9 @@
     </main>
 
     <footer class="footer" id="footer-text">
-        <p>Desenvolvido por João Vítor</p>
+        <p>Desenvolvido por ??</p>
     </footer>
 
-    <script src="../../script/about/about.js"></script>
 </body>
 
 </html>
