--- a/assets/pages/principal/index.html
+++ b/assets/pages/principal/index.html
@@ -15,26 +15,23 @@
     <header class="cabecalho">
         <nav class="menu">
             <a href="../about/about.html" id="about-link" class="menu-link">Sobre</a>
-            <!-- <select id="languageSelect" class="language-select">
-                <option value="pt-br">Português</option>
-                <option value="en">English</option>
-            </select> -->
         </nav>
     </header>
 
     <main class="main-content">
         <section class="content">
             <h1 id="greeting">Olá! Seja bem vindo ao <strong class="highlight-title">leitura online!</strong></h1>
-            <p id="intro">Basta digitar o título em português ou em inglês no campo de pesquisa e clicar em "Pesquisar". O sistema irá buscar livros correspondentes e exibir links para que você possa lê-los online.</p>
+            <p id="intro">Basta digitar o título em português ou em inglês no campo de pesquisa e clicar em "Pesquisar".
+                O sistema irá buscar livros correspondentes e exibir links para que você possa lê-los online.</p>
 
             <div class="links">
                 <h2 class="subtitle" id="social">Acesse as minhas redes</h2>
-                <a href="https://github.com/euvitorti" id="github-link" class="access-link">
+                <a href="seuLinkAqui" id="github-link" class="access-link">
                     <img src="../../img/github.png" alt="" width="25px" height="25px">
                     GitHub
                 </a>
 
-                <a href="https://www.linkedin.com/in/joaolima23" id="linkedin-link" class="access-link">
+                <a href="seuLinkAqui" id="linkedin-link" class="access-link">
                     <img src="../../img/linkedin.png" alt="" width="25px" height="25px">
                     Linkedin
                 </a>
@@ -52,12 +49,12 @@
             <div>
                 <table id="books-table">
                     <thead>
-                    <tr>
-                        <th id="table-header">Link</th>
-                    </tr>
+                        <tr>
+                            <th id="table-header">Link</th>
+                        </tr>
                     </thead>
                     <tbody>
-                    <!-- Books data will be inserted here -->
+                        <!-- Books data will be inserted here -->
                     </tbody>
                 </table>
             </div>
@@ -65,10 +62,10 @@
     </main>
 
     <footer class="footer">
-        <p id="footer-text">Desenvolvido por João Vítor</p>
+        <p id="footer-text">Desenvolvido por ??</p>
     </footer>
 
-    <script src="../../script/principal/index.js"></script>
+    <script src="../../script/index.js"></script>
 </body>
 
 </html>
